--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1>Puppy World</h1>
         <nav>
             <h2>
-                <a href="#">Home</a>
+                <a href="#">Our Home</a>
             </h2>
             <h2>
-                <a herf="#">About</a>
+                <a herf="#">About Us</a>
             </h2>
         </nav>
         <img src="./static/images/logo.jpg" width="70px"/>
